fonts and images

--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
   <body>
     <header>
       <div class="">
-        <img src="img/hapworth.svg" alt="logo" style="width: 60px; height: auto;">
+        <img src="img/hap.png" alt="logo" style="width: 60px; height: auto;">
       </div>
     </header>
     <main id="content-container">
+      <img src="img/monopoly.png" alt="" style="width: 150px;">
       <p><span class="hapworthfont">hapworth </span>is a multidisciplinary agency inaugurated by a group of artists, directors, producers, and writers. We offer complete creative services including graphic identity development, video production, creative direction, and advertising strategies.</p>
       <ul id="mailbox"><span class="wingdings">.</span></ul>
       <ul id="submissions"><span class="font2">We are now open for submissions.</span></ul>
       <ul id="email"><span class="font3">info@hapworth.studio</span></ul>
-
+      <ul id="descriptive-head">
+        <img src="img/lamp.png" alt="" style="width: 150px;">
+      </ul>
       <p id="descriptive-head">
-        <span class="font5">WE HAVE WORKED WITH</span>
       </p>
       <p id="descriptive-text">
-        <span class="font4"><i>Phaidon, Rizzoli, David Zwirner Books, Matthew Marks Gallery, Random Identities, Kim Shui, Tim Coppens, Barney's New York, Anthology Film Archives, De Kooning Classic, Museum of Sex.</i></span>
+        <span class="font4">Phaidon, Rizzoli, David Zwirner Books, Matthew Marks Gallery, Random Identities, Kim Shui, Tim Coppens, Barney's New York, Anthology Film Archives, De Kooning Classic, Museum of Sex.</span>
       </p>
 
     </main>
