--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
   <body>
     <header>
       <div class="">
-        <img src="img/hap.png" alt="logo" style="width: 60px; height: auto;">
-        <img id="image" src="img/lamp.png" alt="" style="height: 150px; width: auto;">
-
+        <img id="logo" src="img/hap.png" alt="logo" style="width: 60px; height: auto;">
       </div>
+      <p><img id="image" src="img/circle.png" alt="" style="height: 120px; width: auto;">
+      </p>
     </header>
 
     <main id="content-container">
       <p><span class="hapworthfont">hapworth </span>is a multidisciplinary agency inaugurated by a group of artists, directors, producers, and writers. We offer complete creative services including graphic identity development, video production, creative direction, and advertising strategies.</p>
-      <ul id="mailbox"><span class="wingdings">.</span></ul>
       <ul id="submissions"><span class="font2">We are now open for submissions.</span></ul>
       <ul id="email"><span class="font3">info@hapworth.studio</span></ul>
       <ul id="descriptive-head">
