--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
+
     <title>home</title>
   </head>
   <body>
@@ -11,7 +13,7 @@
       <div class="">
         <img id="logo" src="img/hap.png" alt="logo" style="width: 60px; height: auto;">
       </div>
-      <p><img id="image" src="img/circle.png" alt="" style="height: 120px; width: auto;">
+      <p><img id="image" src="img/circle.png" alt="" style="height: 75px; width: auto;">
       </p>
     </header>
 
