--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/stylesheet.css">
 
     <title>home</title>
@@ -18,20 +18,21 @@
     </header>
 
     <main id="content-container">
-      <p><span class="hapworthfont">hapworth </span>is a multidisciplinary agency inaugurated by a group of artists, directors, producers, and writers. We offer complete creative services including graphic identity development, video production, creative direction, and advertising strategies.</p>
+      <p><span class="hapworthfont">hapworth </span class="font6">is a multidisciplinary agency inaugurated by a group of artists, directors, producers, and writers. We offer complete creative services including graphic identity development, video production, creative direction, and advertising strategies.</p>
       <ul id="submissions"><span class="font2">We are now open for submissions.</span></ul>
       <ul id="email"><span class="font3">info@hapworth.studio</span></ul>
       <ul id="descriptive-head">
-        <img src="img/monopoly.png" alt="" style="width: 150px;">
+      <img src="img/monopoly.png" alt="" style="width: 150px;">
       </ul>
       <p id="descriptive-head">
-      </p>
-      <p id="descriptive-text">
-        <span class="font4">Phaidon, Rizzoli, David Zwirner Books, Matthew Marks Gallery, Random Identities, Kim Shui, Tim Coppens, Barney's New York, Anthology Film Archives, De Kooning Classic, Museum of Sex.</span>
       </p>
 
     </main>
     <footer>
+      <p id="descriptive-text">
+        <span class="font4">Phaidon, Rizzoli, David Zwirner Books, Matthew Marks Gallery, Random Identities, Kim Shui, Tim Coppens, Barney's New York, Anthology Film Archives, De Kooning Classic, Museum of Sex.</span>
+      </p>
+
       <p id="footer"><span class="foot"><i>new york, 2019</i></span></p>
     </footer>
   </body>
