--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <header>
       <div class="">
-        <img id="logo" src="img/hap.png" alt="logo" style="width: 60px; height: auto;">
+        <img id="logo" src="img/circle.png" alt="logo" style="width: 150px; height: auto;">
       </div>
-      <p><img id="image" src="img/circle.png" alt="" style="height: 75px; width: auto;">
+      <p><img id="image" src="img/hap.png" alt="" style="height: 75px; width: auto;">
       </p>
     </header>
 
