--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </main>
     <footer>
       <p id="descriptive-text">
-        <span class="font4">Phaidon, Rizzoli, David Zwirner Books, Matthew Marks Gallery, Random Identities, Kim Shui, Tim Coppens, Barney's New York, Anthology Film Archives, De Kooning Classic, Museum of Sex.</span>
+        <span class="font4">Phaidon, Rizzoli, David Zwirner Books, Matthew Marks Gallery, S Magazine, Won Hundred, Random Identities, Kim Shui, Tim Coppens, Barney's New York, Anthology Film Archives, De Kooning Classic, Museum of Sex.</span>
       </p>
 
       <p id="footer"><span class="foot"><i>new york, 2019</i></span></p>
