--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="">
-        <img id="logo" src="img/body.png" alt="logo" style="width: 150px; height: auto;">
+        <img id="logo" src="img/house.png" alt="logo" style="width: 200px; height: auto;">
       </div>
       <p><img id="image" src="img/hap.png" alt="" style="height: 75px; width: auto;">
       </p>
