--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/stylesheet.css">
 
-    <title>home</title>
+    <title>HAPWORTH</title>
   </head>
   <body>
     <header>
