--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <title>HAPWORTH</title>
+
+    <style type="text/css">
+@font-face {
+    font-family: "Oroban-Elegans";
+    src: url("fonts/Oroban-Elegans.ttf");
+    src:
+    url("fonts/Oroban-Elegans.woff") format("woff"),
+    url("fonts/Oroban-Elegans.woff2") format("woff2"),
+    url("fonts/Oroban-Elegans.otf") format("opentype"),
+}
+p.customfont {
+    font-family: "Oroban-Elegans";
+}
+
+</style>
   </head>
   <body>
     <header>
