--- a/index.html
+++ b/index.html
@@ -17,6 +17,38 @@
     url("fonts/Oroban-Elegans.otf") format("opentype"),
 }
 
+@font-face {
+font-family: "Oroban-ElegansItalic";
+src: url("fonts/Oroban-ElegansItalic.otf");
+src:
+url("fonts/Oroban-ElegansItalic.woff") format("woff"),
+url("fonts/Oroban-ElegansItalic.woff2") format("woff"),
+url("fonts/Oroban-ElegansItalic.otf") format("opentype"),
+url("fonts/Oroban-ElegansItalic.ttf") format("truetype"),
+
+}
+
+@font-face {
+font-family: "Inferi-Light";
+src: url("fonts/Inferi-Light.otf");
+src:
+url("fonts/Inferi-Light.woff") format("woff"),
+url("fonts/Inferi-Light.otf") format("opentype"),
+url("fonts/Inferi-Light.ttf") format("truetype"),
+
+}
+
+@font-face {
+font-family: "Inferi-LightItalic";
+src: url("fonts/Inferi-LightItalic.otf");
+src:
+url("fonts/Inferi-LightItalic.woff") format("woff"),
+url("fonts/Inferi-LightItalic.woff2") format("woff2"),
+url("fonts/Inferi-Light.ttf") format("truetype")
+url("fonts/Inferi-LightItalic.otf") format("opentype"),
+}
+
+
 </style>
   </head>
   <body>
