--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ url("fonts/Inferi-LightItalic.otf") format("opentype"),
 
     <main id="content-container">
       <p><span class="hapworthfont">hapworth </span class="font6">is a multidisciplinary agency inaugurated by a group of artists, directors, producers, and writers. We offer complete creative services including graphic identity development, video production, creative direction, and advertising strategies.</p>
-      <ul id="submissions"><span class="font2">We are now open for submissions.</span></ul>
+      <ul id="submissions"><span class="font2">submissions:</span></ul>
       <ul id="email"><span class="font3">info@hapworth.studio</span></ul>
       <ul id="descriptive-head">
       <img src="img/monopoly.png" alt="" style="width: 150px;">
@@ -73,7 +73,7 @@ url("fonts/Inferi-LightItalic.otf") format("opentype"),
     </main>
     <footer>
       <p id="descriptive-text">
-        <span class="font4">Phaidon, Rizzoli, David Zwirner Books, Matthew Marks Gallery, S Magazine, Won Hundred, Random Identities, Kim Shui, Tim Coppens, Barney's New York, Anthology Film Archives, De Kooning Classic, Museum of Sex.</span>
+        <span class="font4">Phaidon, Rizzoli, David Zwirner Books, Matthew Marks Gallery, S Magazine, Won Hundred, Random Identities, Kim Shui, Tim Coppens, Barney's New York, Anthology Film Archives, De Kooning Classic, Museum of Sex</span>
       </p>
 
       <p id="footer"><span class="foot"><i>new york, 2019</i></span></p>
