--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ url("fonts/Inferi-LightItalic.otf") format("opentype"),
         <span class="font4">Phaidon, Rizzoli, David Zwirner Books, Matthew Marks Gallery, S Magazine, Won Hundred, Random Identities, Kim Shui, Tim Coppens, Barney's New York, Anthology Film Archives, De Kooning Classic, Museum of Sex</span>
       </p>
 
-      <p id="footer"><span class="foot"><i>new york, 2019</i></span></p>
+      <p id="footer"><span class="foot">new york, 2019</span></p>
     </footer>
   </body>
 </html>
