--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ url("fonts/Inferi-LightItalic.otf") format("opentype"),
     </header>
 
     <main id="content-container">
-      <p><span class="hapworthfont">hapworth </span class="font6">is a multidisciplinary agency inaugurated by a group of artists, directors, producers, and writers. We offer complete creative services including graphic identity development, video production, creative direction, and advertising strategies.</p>
+      <p><span class="hapworthfont">hapworth </span class="font6">is a multidisciplinary agency inaugurated by a group of artists, directors, producers, and writers. We offer complete creative services including graphic identity development, video production, creative direction, book design, and advertising strategies.</p>
       <ul id="submissions"><span class="font2">submissions:</span></ul>
       <ul id="email"><span class="font3">info@hapworth.studio</span></ul>
       <ul id="descriptive-head">
@@ -74,7 +74,6 @@ url("fonts/Inferi-LightItalic.otf") format("opentype"),
       <p id="descriptive-text">
         <span class="font4">Phaidon, Rizzoli, David Zwirner Books, Matthew Marks Gallery, S Magazine, Won Hundred, Random Identities, Kim Shui, Tim Coppens, Barney's New York, Anthology Film Archives, De Kooning Classic, Museum of Sex</span>
       </p>
-
       <p id="footer"><span class="foot">new york, 2019</span></p>
     </footer>
   </body>
