--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ url("fonts/Inferi-LightItalic.otf") format("opentype"),
 
     <main id="content-container">
       <p><span class="hapworthfont">hapworth </span class="font6">is a multidisciplinary agency inaugurated by a group of artists, directors, producers, and writers. We offer complete creative services including graphic identity development, video production, creative direction, book design, and advertising strategies.</p>
-      <ul id="submissions"><span class="font2">submissions:</span></ul>
+      <ul id="submissions"><span class="font6">*</span></ul>
       <ul id="email"><span class="font3">info@hapworth.studio</span></ul>
       <ul id="descriptive-head">
       </ul>
