alphebatize clients, clickable email, unitalicize footer

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ url("fonts/Inferi-LightItalic.otf") format("opentype"),
     </header>
 
     <main id="content-container">
-      <p><span class="hapworthfont">hapworth </span class="font6">is a multidisciplinary agency inaugurated by a group of artists, directors, producers, and writers. We offer complete creative services including graphic identity development, video production, creative direction, book design, and advertising strategies.</p>
+      <p><span class="hapworthfont">hapworth </span class="font6">is a multidisciplinary agency inaugurated by a group of artists, directors, producers, and writers. We offer complete creative services including graphic identity development, video production, book design, and campaign production.</p>
       <ul id="submissions"><span class="font6">*</span></ul>
-      <ul id="email"><span class="font3">info@hapworth.studio</span></ul>
+      <ul id="email"><a href="mailto:info@hapworth.studio" style="color:#00BB85;" class="font3">info@hapworth.studio</a></ul>
       <ul id="descriptive-head">
       </ul>
       <p id="descriptive-head">
@@ -72,7 +72,7 @@ url("fonts/Inferi-LightItalic.otf") format("opentype"),
     </main>
     <footer>
       <p id="descriptive-text">
-        <span class="font4">Phaidon, Rizzoli, David Zwirner Books, Matthew Marks Gallery, S Magazine, Won Hundred, Random Identities, Kim Shui, Tim Coppens, Barney's New York, Anthology Film Archives, De Kooning Classic, Museum of Sex</span>
+        <span class="font4">Anthology Film Archives, Barney's New York, C24 Gallery, David Zwirner Books, De Kooning Classic, Famous Dex, Kim Shui, Matthew Marks Gallery, Museum of Sex, Phaidon, S Magazine, Tim Coppens, Won Hundred</span>
       </p>
       <p id="footer"><span class="foot">new york, 2019</span></p>
     </footer>
